Added the zerodha logo

--- a/Zerodha_BasicPage_HTML ONLY/index.html
+++ b/Zerodha_BasicPage_HTML ONLY/index.html
@@ -1,6 +1,8 @@
 <div>
     <div>
-        <span>Zerodha </span>
+        <span>
+            <img src="Zerodha_logo.svg"></img>
+        </span>
         <span>Signup </span>
         <span>About </span>
         <span>Products </span>
