Changed the size of logo and bg

--- a/Zerodha_BasicPage_HTML ONLY/index.html
+++ b/Zerodha_BasicPage_HTML ONLY/index.html
@@ -1,7 +1,7 @@
 <div>
     <div>
         <span>
-            <img src="Zerodha_logo.svg"></img>
+            <img width="150" src="Zerodha_logo.svg"></img>
         </span>
         <span>Signup </span>
         <span>About </span>
@@ -10,7 +10,7 @@
         <span>Support </span>
     </div>
     <center>
-        <img src="landingpage_zerodha.png"></img>
+        <img width="1100" src="landingpage_zerodha.png"></img>
     </center>
     <center>
         <h1>Invest in everything</h1>
