Made some attribute changes and used br tags

--- a/Zerodha_BasicPage_HTML ONLY/index.html
+++ b/Zerodha_BasicPage_HTML ONLY/index.html
@@ -1,20 +1,26 @@
 <div>
     <div>
-        <span>
+        <a href="index.html">
             <img width="150" src="Zerodha_logo.svg"></img>
-        </span>
+        </a>
         <span>Signup </span>
         <span>About </span>
         <span>Products </span>
         <span>Pricing </span>
         <span>Support </span>
     </div>
+    <br></br>
+    <br></br>
+    <br></br>
     <center>
         <img width="1100" src="landingpage_zerodha.png"></img>
     </center>
+    <br></br>
+    <br></br>
     <center>
         <h1>Invest in everything</h1>
         <h4>Online platform to invest in stocks, derivatives, mutual funds, and more</h4>
+        <br></br>
         <button>Sign up now</button>
     </center>
 </div>    
