Added some css styling and learnt about padding and margins

--- a/Zerodha_BasicPage_HTML ONLY/index.html
+++ b/Zerodha_BasicPage_HTML ONLY/index.html
@@ -19,8 +19,7 @@
     <br></br>
     <center>
         <h1>Invest in everything</h1>
-        <h4>Online platform to invest in stocks, derivatives, mutual funds, and more</h4>
-        <br></br>
-        <button>Sign up now</button>
+        <h4 style="color: gray;">Online platform to invest in stocks, derivatives, mutual funds, and more</h4>
+        <button style="font-size: 20px; margin-top: 25px; background-color: #387ed1; padding-left: 30px; padding-top: 10px; padding-bottom: 10px; padding-right: 30px; color: aliceblue; border-radius: 3px; border: 1px solid black;">Sign up now</button>
     </center>
 </div>    
