--- a/Zerodha_BasicPage_HTML ONLY/index.html
+++ b/Zerodha_BasicPage_HTML ONLY/index.html
@@ -1,22 +1,19 @@
 <div>
-    <div>
+    <div style="display: flex; justify-content: space-between; margin-left: 100px; margin-top: 25px; margin-right: 100;">
         <a href="index.html">
             <img width="150" src="Zerodha_logo.svg"></img>
         </a>
-        <span>Signup </span>
-        <span>About </span>
-        <span>Products </span>
-        <span>Pricing </span>
-        <span>Support </span>
+        <div style="display: flex;">
+            <div> Signup </div>
+            <div> About </div>
+            <div> Products </div>
+            <div> Pricing </div>
+            <div> Support </div>
+        </div>
     </div>
-    <br></br>
-    <br></br>
-    <br></br>
-    <center>
+    <center style="margin-top: 100px; margin-bottom: 100px;">
         <img width="1100" src="landingpage_zerodha.png"></img>
     </center>
-    <br></br>
-    <br></br>
     <center>
         <h1>Invest in everything</h1>
         <h4 style="color: gray;">Online platform to invest in stocks, derivatives, mutual funds, and more</h4>
