--- a/Zerodha_BasicPage_HTML ONLY/index.html
+++ b/Zerodha_BasicPage_HTML ONLY/index.html
@@ -1,22 +1,22 @@
 <div>
-    <div style="display: flex; justify-content: space-between; margin-left: 100px; margin-top: 25px; margin-right: 100;">
+    <div style="display: flex; justify-content: space-between; padding-left: 100px; padding-right: 100px; padding-top: 10px; box-shadow: 2px 1px 2px #eee;">
         <a href="index.html">
-            <img width="150" src="Zerodha_logo.svg"></img>
+            <img width="150" src="Zerodha_logo.svg" style="padding: 20px;"></img>
         </a>
         <div style="display: flex;">
-            <div> Signup </div>
-            <div> About </div>
-            <div> Products </div>
-            <div> Pricing </div>
-            <div> Support </div>
+            <div style="padding: 20px; color: gray; cursor: pointer;"> Signup </div>
+            <div style="padding: 20px; color: gray; cursor: pointer;"> About </div>
+            <div style="padding: 20px; color: gray; cursor: pointer;"> Products </div>
+            <div style="padding: 20px; color: gray; cursor: pointer;"> Pricing </div>
+            <div style="padding: 20px; color: gray; cursor: pointer;"> Support </div>
         </div>
     </div>
-    <center style="margin-top: 100px; margin-bottom: 100px;">
+    <div style="display: flex; justify-content: center; margin-top: 100px; margin-bottom: 100px;">
         <img width="1100" src="landingpage_zerodha.png"></img>
-    </center>
+    </div>
     <center>
-        <h1>Invest in everything</h1>
-        <h4 style="color: gray;">Online platform to invest in stocks, derivatives, mutual funds, and more</h4>
-        <button style="font-size: 20px; margin-top: 25px; background-color: #387ed1; padding-left: 30px; padding-top: 10px; padding-bottom: 10px; padding-right: 30px; color: aliceblue; border-radius: 3px; border: 1px solid black;">Sign up now</button>
+        <h1 style="font-weight: 500;">Invest in everything</h1>
+        <h4 style="color: gray; font-weight: 400;">Online platform to invest in stocks, derivatives, mutual funds, and more</h4>
+        <button style=" cursor: pointer; font-size: 20px; margin-top: 25px; background-color: #387ed1; padding-left: 30px; padding-top: 10px; padding-bottom: 10px; padding-right: 30px; font-size: 20px; color: aliceblue; border-radius: 3px; border: 1px solid black;">Sign up now</button>
     </center>
 </div>    
